--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <div id="last">
             <div class="imageWrap">
                 <div class="speech-bubble final-bubble">
-                    <p class="speech-text">이렇게 작지만, 밭을 일구로 작물을 키운다는 게요.<br>생각보다 시간이 오래 걸리는 일이잖아요.</p>
+                    <p class="speech-text">이렇게 작지만, 밭을 일구고 작물을 키운다는 게요.<br>생각보다 시간이 오래 걸리는 일이잖아요.</p>
                 </div>
                 <div class="speech-bubble final-bubble">
                     <p class="speech-text">근데 그 오래 걸리는 게 좋을 때가 있어요.</p>
