--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <link href="https://hangeul.pstatic.net/hangeul_static/css/maru-buri.css" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="./image/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="./image/">
 </head>
 <body>
     <section class="scene zero">
